--- a/index.html
+++ b/index.html
@@ -1,1 +1,29 @@
-index.html
+<!DOCTYPE html>
+<html>
+<head>
+  <title>Excursion</title>
+  <link href="resources/css/style.css" rel="stylesheet" type="text/css">
+</head>
+
+<body>
+  <header>
+    <h1>Discover hidden places in the world around you</h1>
+    <p><a href="#">Download Excursion (Coming Soon!)</a>
+  </header
+
+</body>
+</html>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
