--- a/index.html
+++ b/index.html
@@ -9,8 +9,15 @@
   <header>
     <h1>Discover hidden places in the world around you</h1>
     <p><a href="#">Download Excursion (Coming Soon!)</a>
-  </header
-
+    <p><video src="resources/videos/excursion.mp4" controls autoplay loop></video></p>
+    <h2>Your personal travel guide</h2>
+    <p>Excursion remembers places you like, and recommends new points of interest around you.</p>
+    <p><img src="resources/images/camp.jpg"></p>
+    <p><img src="resources/images/phone.png"></p>
+    <h2>Coming Soon for iPhone and Android</h2>
+    <p><a href="#">Download Excursion (Coming Soon!)</a>
+  </header>
+  <footer>&copy; Excursion</footer>
 </body>
 </html>
 
